# serializer version: 1
# name: TestTransactionsAccept.test_created_by_user
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_forbidden
  dict({
    'code': 'drf.permission_denied',
    'message': 'At least one verified gadget is required',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_invalid_status[no_response]
  dict({
    'code': 'api.bad_request',
    'message': 'Transaction can only be accepted or rejected',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_invalid_status[pending]
  dict({
    'code': 'api.bad_request',
    'message': 'Transaction can only be accepted or rejected',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_negative_volume
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsAccept.test_no_previous_transactions
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsAccept.test_traceability_full
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsAccept.test_transaction_does_not_exist
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_transaction_expired
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_transaction_not_pending
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_transaction_not_user
  dict({
    'code': 'api.not_found',
    'errors': dict({
      'transaction': list([
        '00000000-0000-0000-0000-000000000000',
      ]),
    }),
    'message': 'Object Not Found',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_unauthorized
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_user_deleted
  dict({
    'code': 'drf.not_authenticated',
    'message': 'Authentication credentials were not provided.',
    'success': False,
  })
# ---
# name: TestTransactionsAccept.test_worst_previous_traceability[traceability_list0]
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsAccept.test_worst_previous_traceability[traceability_list1]
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsAccept.test_worst_previous_traceability[traceability_list2]
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
# name: TestTransactionsAccept.test_worst_previous_traceability[traceability_list3]
  dict({
    'message': 'Transaction status updated',
    'success': True,
  })
# ---
